--- a/ChallengeMe/.settings/org.eclipse.wst.common.component
+++ b/ChallengeMe/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,9 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/" source-path="/WebContent/WEB-INF/lib"/>
+        <dependent-module archiveName="sqljdbc42.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/ChallengeMe/WebContent/WEB-INF/lib/sqljdbc42.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="ChallengeMe"/>
         <property name="java-output-path" value="/ChallengeMe/build/classes"/>
     </wb-module>
